# xsetleds

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  TODO  acconfig.h  aclocal.m4  config.h.in  configure  configure.in  xsetleds.1  xsetleds.info  xsetleds.lsm.in  xsetleds.spec.in  xsetleds.texinfo
po/: ChangeLog  POTFILES.in  es.gmo  es.po  xsetleds.pot
src/: Makefile.am  Makefile.in  utils.c  xsetleds.c  xsetleds.h
