EXTRA_DIST=xsetleds.lsm.in xsetleds.spec.in xsetleds.texinfo \
	xsetleds.1 aclocal.m4

SUBDIRS = intl po src

#  if you write a self-test script named `chk', uncomment the
#  following and add `chk' to the EXTRA_DIST list
#TESTS=chk

#  build and install the .info pages
info_TEXINFOS = xsetleds.texinfo
xsetleds_TEXINFOS = gpl.texinfo

#  install the man pages
man_MANS=xsetleds.1
