dnl Process this file with autoconf to produce a configure script.

AC_INIT(src/xsetleds.c)
AM_INIT_AUTOMAKE(xsetleds, 0.1.3)

dnl create a config.h file (Automake will add -DHAVE_CONFIG_H)
AM_CONFIG_HEADER(config.h)

AC_SUBST(VERSION)

ISODATE=`date +%Y-%m-%d`
AC_SUBST(ISODATE)

AC_CANONICAL_HOST

AC_ISC_POSIX

dnl Checks for programs.
AC_PROG_INSTALL
AC_PROG_CC

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(stdio.h string.h stdlib.h stdarg.h)

dnl find the X11 include and library directories
AC_PATH_X
AC_PATH_XTRA

dnl Check for X11 libraries
save_cflags="$CFLAGS"
save_ldflags="$LDFLAGS"
CFLAGS="$CFLAGS $X_CFLAGS"
LDFLAGS="$LDFLAGS $X_LDFLAGS $X_LIBS"

# Check for libX11
AC_CHECK_LIB(X11, XOpenDisplay, X11_LIBS="-lX11 $X_EXTRA_LIBS",
	AC_MSG_ERROR([libX11 could not be found. See 'config.log' for details.]),
	$X_EXTRA_LIBS)

# Check for XKB extension to be present
AC_CHECK_LIB(X11, XkbGetIndicatorState,
	AC_DEFINE(HAVE_XKB, 1, [Define if XKB extension is present.]),
	AC_MSG_WARN([XKB extension to X11 not present.]),
	$X11_LIBS)

# Check for XTest extension
AC_CHECK_LIB(Xtst, XTestFakeKeyEvent, X11_LIBS="-lXtst $X11_LIBS",
	AC_MSG_ERROR([libXtst could not be found. See 'config.log' for details.]),
	$X11_LIBS)

CFLAGS="$save_cflags"
LDFLAGS="$save_ldflags"
X11_CFLAGS="$X_CFLAGS"
X11_LDFLAGS="$X_LDFLAGS $X_LIBS $X11_LIBS"

AC_SUBST(X11_CFLAGS)
AC_SUBST(X11_LDFLAGS)


dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.

dnl National language support
ALL_LINGUAS="es"
AM_GNU_GETTEXT

dnl AC_DEFINE_UNQUOTED(LOCALEDIR, "$LOCALEDIR")
dnl AC_SUBST(LOCALEDIR)

AC_OUTPUT(
Makefile
src/Makefile
intl/Makefile
po/Makefile.in 
xsetleds.lsm
xsetleds.spec)
